Avalara Fullqa/src/PFLSwagIQ/objects/SwagIQ_Constants__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains all the constants for Swag IQ</description>
    <fields>
        <fullName>Assign_Manual_Task_To_Current_User__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Assign Manual Task To Current User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Canvas_App_Name__c</fullName>
        <label>Canvas App Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_FollowUp_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create follow-up task upon delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Public_Tasks_For_Time_Based__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Public Tasks For Time Based</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Public_Tasks_For_Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Public Tasks For Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_task_upon_order_creation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create task upon order creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gift_Sender_City__c</fullName>
        <label>Gift Sender City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Sender_Company__c</fullName>
        <label>Gift Sender Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Sender_Country__c</fullName>
        <label>Gift Sender Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Sender_Email__c</fullName>
        <label>Gift Sender Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Gift_Sender_First_Name__c</fullName>
        <label>Gift Sender First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Sender_Last_Name__c</fullName>
        <label>Gift Sender Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Sender_Phone__c</fullName>
        <label>Gift Sender Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Gift_Sender_Postal_Code__c</fullName>
        <label>Gift Sender Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Sender_State__c</fullName>
        <label>Gift Sender State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Sender_Street_Address__c</fullName>
        <label>Gift Sender Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Sender_User_Id__c</fullName>
        <label>Gift Sender User Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Api_User_Set__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when API user was set from SwagIQ tools page</description>
        <inlineHelpText>Checked when API user was set from SwagIQ tools page</inlineHelpText>
        <label>Is Api User Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Budget_Role_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Use budget Role Hierarchy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Triggers_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check to enable trigger and rules evaluation.</description>
        <inlineHelpText>All SwagIQ created Rules and Triggers will be evaluated if checked.</inlineHelpText>
        <label>Trigger Evaluation Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Order_Batch_ID__c</fullName>
        <label>Send Order Batch ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Order_Job_Name__c</fullName>
        <label>Send Order Job Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Order_Job__c</fullName>
        <label>Send Order Job</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Swag_Orders_Interval__c</fullName>
        <label>Send Swag Orders Interval</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Send_Swag_Orders_Scope__c</fullName>
        <label>Send Swag Orders Scope</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Show_Community_Users__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Community Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SwagIQ_Connection_Name__c</fullName>
        <label>SwagIQ Connection Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Swag_Check_Swaggable__c</fullName>
        <label>Swag - Check Swaggable</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Swag_Delivered_Task_Name__c</fullName>
        <label>Swag Delivered Task Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Swag_Minimum_Interval_All__c</fullName>
        <label>Swag Minimum Interval - All</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_Name__c</fullName>
        <description>Task Name that is needed for sending Swag.</description>
        <label>Send Swag Task Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trigger_CPU_Time__c</fullName>
        <label>Trigger CPU Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SwagIQ Constants</label>
</CustomObject>